--- a/Client/src/Components/Footer.css
+++ b/Client/src/Components/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     display: flex;
     background-color: transparent;
-    height: 5vh;
+    height: fit-content;
     width: 98%;
     font-weight: 900;
     font-size: 10px;
@@ -10,4 +10,5 @@
     padding: 10px;
     align-items: center;
     justify-content: center;
+    margin-top: 5%;
 }
