--- a/Client/src/Pages/MainPage.css
+++ b/Client/src/Pages/MainPage.css
@@ -6,4 +6,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 3%;
+    padding: 2%;
 }
